# VKR

./: .gitignore  GM_functions.hpp  README.md  db.drawio  main.cpp  main.py  pyproject.toml  test.cpp
GM_test/: functions.hpp  main.cpp
api/genetic-method/: codegen.hpp  graph.hpp
examples/knapsack_problem/: evolution_log.hpp  functions.hpp  gen_problem.cpp  main.cpp
examples/one-node/: functions.hpp  main.cpp
examples/simple/: functions.hpp  main.cpp
genetic-method/functions-store/: store-api.py
genetic-method/src/: interfaces.hpp
genetic-method/test/: test.cpp
genetic_method/: evolution_tree.cpp  evolution_tree.hpp  genetic_algorithm.cpp  genetic_algorithm.hpp  interfaces.cpp  interfaces.hpp  types.cpp  types.hpp
genetic_method/API/: api.py  app.py  contract.py  controller.py  db_scripts.py  startup_db.py
genetic_method/function_store/: db.py  models.py
genetic_method/src/: evolution_log.hpp  evolution_tree.hpp  genetic_algorithm.hpp  interfaces.hpp  log_interfaces.hpp  loger.hpp  types.hpp
genetic_method/test/: simple_test.cpp  test.cpp
knapsack-problem/: knapsack_problem.hpp  knapsack_problem_generator.hpp  knapsack_problem_solver.hpp
knapsack_problem/: GM.cpp  GM_functions.hpp  GM_tree.cpp  knapsack_problem.hpp  knapsack_problem_generator.hpp  knapsack_problem_solver.hpp
src/: algorithm.hpp  heuristic_algorithms.hpp
src/genetic_algorithm/: genetic_algorithm.hpp  interfaces.hpp  types.hpp
tools/: benchmark.hpp  buffer_type.cpp  buffer_type.hpp  knapsack_problem_test.hpp  loger.hpp  nullable_type.cpp  nullable_type.hpp
(+29 files in other folders)
