[tool.poetry]
name = "vkr"
version = "0.1.0"
description = ""
authors = ["Kirill <Rudovichkirill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
fastapi = "^0.105.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
uvicorn = "^0.24.0.post1"
psycopg2 = "^2.9.9"
toolz = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
